--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "framer-motion": "^11.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1"
   },
